tests/compile/fail/composite_missing_return_type.stderr
error: custom attribute panicked
 --> tests/compile/fail/composite_missing_return_type.rs:4:1
  |
4 | #[hegel::composite]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = help: message: #[composite] generators must explicitly declare a return type.

warning: unused import: `hegel::TestCase`
 --> tests/compile/fail/composite_missing_return_type.rs:1:5
  |
1 | use hegel::TestCase;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `hegel::generators as gs`
 --> tests/compile/fail/composite_missing_return_type.rs:2:5
  |
2 | use hegel::generators as gs;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
